<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections_text">Upcoming Elections</string>
    <string name="find_my_reps_text">Find My Representatives</string>
    <string name="saved_elections_text">Saved Elections</string>
    <string name="my_representatives_text">My Representatives</string>
    <string name="election_info_text">Election Information</string>
    <string name="voting_locations_text"><u>Voting Locations</u></string>
    <string name="ballot_info_text"><u>Ballot Information</u></string>
    <string name="follow_election_text">Follow Election</string>
    <string name="unfollow_election_text">Unfollow Election</string>
    <string name="followed_elections_header_text" >Followed Elections</string>
    <string name="use_my_locations_text" >Use my Location</string>


    <string name="enable_dialog_message">Please enable Locations in the Settings </string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="enable_location">Enable Location</string>
    <string name="rationale_for_location_permissions">This App always needs Location Permission for best results. Please grant the permissions in the settings </string>

    <string name="address_line_1_hint">Address Line 1</string>
    <string name="address_line_2_hint">Address Line 2</string>
    <string name="city_hint">City</string>
    <string name="zip_code_hint">ZIP Code</string>
    <string name="unnamed_address">Unnamed Address</string>
    <string name="invalid_address">No Valid USA Address Found, Please Try Again</string>
    <string name="rep_search_title">Representative Search</string>
    <string name="no_connection_string">Connection Error, please check your Network Settings and try again</string>
    <string name="error">Error</string>
    <string name="elections_fragment_string">Elections Screen</string>
    <string name="reps_fragment_string">Representatives Screen</string>
    <string name="voter_info_fragment">Voter Info Screen </string>
    <string name="launch_fragment_string">Launch Screen</string>

    <string name="styled_voting_location"><![CDATA[pot]]> </string>
    <string name="styled_ballot_info"><![CDATA[<b>Description:</b>]]></string>
    <string name="hyperlink">Follow me </string>

</resources>
